syntax = "proto3";

import "IdentityService/Models/Common/enums.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Gen.IdentityService.Entities";

message ApplicationUser {
    optional int32 id = 1;
    optional string name = 2;
    optional string password = 3;
    optional string email = 4;
    bool email_confirmed = 5;
    optional string phone_number = 6;
    optional string normalized_name = 7;
    optional string normalized_email = 8;
    optional string security_stamp = 9;
    optional string concurrency_stamp = 10;
    bool phone_number_confirmed = 11;
    bool two_factor_enabled = 12;
    optional google.protobuf.Timestamp lockout_end = 13;
    bool lockout_enabled = 14;
    int32 access_failed_count = 15;
    repeated ApplicationUserRole roles = 16;
}